# hydra

./: .gitignore  README.md  hydra.code-workspace  pyproject.toml  pyrightconfig.json
configs/: dyllan.ini
data/: Bitfinex_BTCUSD_1h.100.test.csv  Bitfinex_BTCUSD_1h.100.test.xlsx  Bitfinex_BTCUSD_1h.csv  Bitfinex_BTCUSD_1h.test.csv  Bitfinex_BTCUSD_1h.test.xlsx  Bitfinex_DASHUSD_1h.csv  Bitfinex_ETHUSD_1h.csv  Bitfinex_LTCUSD_1h.csv
dataloader/: __init__.py  binance_data.py  kraken.py  pairs.py  price_to_db.py
hydra/: BokehChart.py  DataLoader.py  Eminem.py  EminemChunked.py  Environments.py  Hydra.py  LivinOnAPrayer.py  OrderGenerator.py  PlotlyChart.py  PriceLoader.py  SimManager.py  Simulation.py  Simulator.py  Strategy.py  SuperSim.py  __init__.py  chart.py  graph.py  groupbytest.py  isin.py  models.py  money.py  mpl_charts.py  plotly_charts.py  test.py  types.py  utils.py
hydra/SignalGenerators/: AroonSignalGenerator.py  aroon time graph.py  test.py
hydra/archive/: BokehChart.py  OrderGeneratorOld.py  __init__.py
hydra/archive/indicators/: AroonOpen.py  AroonTulip.py  HeikinAshi_test.py  PSAR.py  __init__.py  tuliptest.py
hydra/archive/strategies/: AroonOpenStrategy.py  PSARStrategy.py  PSARoonStrategy.py  __init__.py
hydra/indicators/: Aroon.py  AroonTulip.py  Aroon_test.py  FFT.py  HeikinAshi.py  HeikinAshi_test.py  __init__.py  types.py
hydra/strategies/: AroonOpenStrategy.py  AroonStrategy.py  AroonStrategy_test.py  __init__.py
js/: .eslintrc.cjs  .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
js/client/: App.vue  chart-plugins.ts  components.d.ts  feathers.ts  index.html  main.ts  router.ts  tsconfig.json  tsconfig.vite-config.json  vite.config.ts
js/client/views/: Home.vue  PricePredictions.vue  RandomWalk.vue  SineWave.vue  halp.vue
js/config/: default.json  production.json
js/public/: index.html
js/server/: app.ts  dbtest.ts  duckdb.d.ts  knex.ts
js/server/services/: index.ts
js/server/services/fft-indicator/: fft-indicator.class.ts  fft-indicator.service.ts
js/server/services/prices/: prices.class.ts  prices.model.ts  prices.service.ts
js/src/: duckdb.d.ts
js/src/services/: index.ts
js/src/services/fft-indicator/: fft-indicator.class.ts  fft-indicator.service.ts
js/test/: app.test.ts  tsconfig.json
js/test/services/: fft-indicator.test.ts  prices.test.ts
notebooks/: binance.ipynb  enviroments.ipynb  log.txt  output-compare.ipynb  portfolio.ipynb  prices.ipynb  test.ipynb
notebooks/archive/: portfolio fig.ipynb  portfolio.ipynb
output/: XBTUSD 2018-05-15 2018-05-16 1 Aroon 100-101.portfolio  XBTUSD 2018-05-15 2018-07-15 1 Aroon 100-101.portfolio
tests/: test_hydra.py  test_pytest.py
utils/: csv2parquet.py  gapfiller.py  indicator_doc.py
utilsPkg/: gapfiller.py
webapp/: generate_fft.py  main.py
