[tool.poetry]
name = "hydra"
version = "0.1.0"
description = ""
authors = ["Dyllan To <me@dyllan.to>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.9"
numpy = "^1.20.0"
tqdm = "^4.56.1"
pyarrow = "^3.0.0"
plotly = "^4.14.3"
psutil = "^5.8.0"
requests = "^2.25.1"
SQLAlchemy = "^1.3.23"
# TA-Lib = { file = "./lib/TA_Lib-0.4.19-cp38-cp38-win_amd64.whl" }
numba = "^0.52.0"
jupyterlab = "^3.0.12"
vectorbt = "^0.17.4"
duckdb = "^0.2.5"
scalene = {version="^1.3.2", markers = "sys_platform == 'linux'"}
dask = "^2021.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hydra = "hydra:main"
supersim = "hydra.SuperSim:start"
graph= "hydra.graph:draw"
save = "hydra.SignalGenerators.AroonSignalGenerator:save"
null = "hydra.SignalGenerators.AroonSignalGenerator:null"
