[tool.poetry]
name = "hydra"
version = "0.1.0"
description = ""
authors = ["Dyllan To <me@dyllan.to>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
tqdm = "^4.56.1"
pyarrow = "^3.0.0"
plotly = "^4.14.3"
psutil = "^5.8.0"
requests = "^2.25.1"
SQLAlchemy = "^1.3.23"
# TA-Lib = { file = "./lib/TA_Lib-0.4.19-cp38-cp38-win_amd64.whl" }
numba = "^0.53.1"
jupyterlab = "^3.0.12"
duckdb = "^0.2.5"
retrying = "^1.3.3"
sparse = "^0.12.0"
dask = "^2021.4.1"
distributed = "^2021.4.1"
s3fs = "^2021.4.0"
numpy = "^1.20.3"
intel-openmp = "^2021.2.0"
ray = {extras = ["default"], version = "^1.4.0"}
pandas = "^1.2.4"
vectorbt = "0.17.4"
PyQt5 = "^5.15.4"
seaborn = "^0.11.2"
python-binance = "^1.0.15"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
rope = "^0.19.0"
scalene = {version="^1.3.16", markers = "sys_platform == 'linux'"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hydra = "hydra:main"
supersim = "hydra.SuperSim:start"
graph= "hydra.graph:draw"
save = "hydra.SignalGenerators.AroonSignalGenerator:save"
null = "hydra.SignalGenerators.AroonSignalGenerator:null"
